more latex notes

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -17,6 +17,62 @@ Lorem ipsum dolor sit amet $ \varphi^{\scriptsize UF} $ a formula in the theory 
 
 \centerline{~}
 
+Lorem ipsum dolor sit amet $ \bot $ absurdum.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \wedge $ conjunction.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \vee $ disjunction.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \rightarrow $ implication.  A -> B,  A implies B.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \rho $ rho.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \mathcal{M} $ big m.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \Gamma $ Gamma.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \equiv $ logically equivalent. valid in exactly the same models.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \neg $ negation.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \top $ "trueness" or $ \neg \bot $.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \forall $ forall.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \models $ (the equal thing) $ \nvDash $.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \nexists $ nexists.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \not\equiv $ .... not equiv, so not models? $ \not\models $??
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $  $ desc.
 
 \centerline{~}
