adding psi to the latex file

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -13,6 +13,10 @@ Lorem ipsum dolor sit amet $ \vDash \varphi $ all/any/every assignment satisfies
 
 \centerline{~}
 
+Lorem ipsum dolor sit amet $ \vDash \psi $ all/any/every assignment satisfies psi.
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $ \varphi^{\scriptsize UF} $ a formula in the theory of uninterpreted functions.
 
 \centerline{~}
