more latex formulas

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -5,6 +5,59 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+Lorem ipsum dolor sit amet $ \wedge $ logical AND; conjunction.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \vee $ logical OR; disjunction.
+
+\centerline{~}
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \neg $ not; negation.
+
+\centerline{~}
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \rightarrow $ implication.
+
+\centerline{~}
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \bot $ absurdum; contradiction.
+
+\centerline{~}
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \leftarrow  $ implication, with operands in the reverse order
+
+\centerline{~}
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \square $ absurdum; contradiction.
+
+\centerline{~}
+
+
+Lorem ipsum dolor sit amet $ a \wedge b $ desc.
+
+\centerline{~}
+
+
+Lorem ipsum dolor sit amet $ [ ( x + y ) > z ] \rightarrow [ y > ( z - x ) ] $ desc.
+
+\centerline{~}
+
+
+Lorem ipsum dolor sit amet $ a \leftarrow ( b \wedge c \wedge d )  $ desc.
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $ \alpha \vDash \varphi $ alpha satisfies phi.
 
 \centerline{~}
