more latex symbols

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -3,6 +3,44 @@
 
 Please ignore the lorem ipsum stuff. This is here so that when I import this into MS Word, I can verify that things got imported in a format that is acceptable.  Just ignore!
 
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ a \leftarrow ( b \wedge c \wedge d )  $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ a \vee \neg b \vee \neg c $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ x \leftarrow y \equiv x \vee \neg y $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ a \leftarrow ( b \wedge c ) $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet notation used for $ \leftarrow $, and the comma  desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ a \vee \neg b \vee \neg c $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ m \vee \neg n $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ z \vee \neg x \vee \neg y \vee \neg z $ desc.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet program clauses $ \cup $ (negation of goal) desc.
+
+
 \centerline{~}
 
 Lorem ipsum dolor sit amet $ \wedge $ logical AND; conjunction.
