--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -4,6 +4,11 @@
 Please ignore the lorem ipsum stuff. This is here so that when I import this into MS Word, I can verify that things got imported in a format that is acceptable.  Just ignore!
 
 
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ abcd \mathscr{L} abcd \mathcal{L}  abcd $ desc.
+
 \centerline{~}
 
 Lorem ipsum dolor sit amet $ a \leftarrow ( b \wedge c \wedge d )  $ desc.
