halleluyah! now the diff makes it clear that i only changed two things. (because i thwarted mendeley's re-shuffling of all entries by using emacs to reorder)

--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -311,13 +311,13 @@ year = {2012}
 }
 @book{Tropashko2007,
 abstract = {This indispensable SQL reference book is the first of its kind to leverage the benefits of design patterns to relational database SQL queries; all common SQL structures and design patterns are clearly categorized and described. Emphasizing the theoretical foundation for almost every type of SQL query problem, accompanying figures are included to help visualize the problem. Because SQL is a declarative language there are many ways to write any SQL query and professional database programmers must understand the correct way to write SQL for complicated database queries, and managers must institute formal SQL coding standards to improve productivity and maintainability. The SQL design patterns in this resource greatly improve the quality and productivity of systems development projects by forming a "best practices" foundation for all relational database queries.},
-author = {Tropashko, Vadim and Burleson, Donald K.},
+author = {Tropashko, Vadim},
 isbn = {0977671542},
 pages = {255},
 publisher = {Rampant TechPress},
 title = {{SQL Design Patterns: Expert Guide to SQL Programming}},
 url = {http://books.google.com/books?id=ZzxDGQAACAAJ\&pgis=1},
-year = {2007}
+year = {2006}
 }
 @inproceedings{Veanes:2010:QSS:1939141.1939165,
 address = {Berlin, Heidelberg},
