another book to be cited

--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -45,6 +45,15 @@ title = {{The Calculus of Computation: Decision Procedures with Applications to 
 url = {http://books.google.com/books?id=0MbX7xVpffAC\&pgis=1},
 year = {2010}
 }
+@book{Date1997,
+abstract = {The previous edition of this book established itself as the most complete and understandable treatment of the SQL standard generally available. Many changes have occurred in the SQL standards world since that edition was published, however: a major new component, the Call-Level Interface (SQL/CLI), was added in 1995. Another major new component, the Persistent Stored Modules feature (SQL/PSM), is nearing completion and is due to be added to the standard in late 1996 or early 1997. The original 1992 standard itself has been significantly changed and corrected through the publication of two extensive Technical Corrigenda, one in 1994 and one in 1996.All of these changes are reflected in this Fourth Edition. Earlier editions of this book established a tradition of careful, clear, and accurate explanation of complex technical material. This new edition continues that tradition.},
+author = {Date, C. J. and Darwen, Hugh},
+pages = {522},
+publisher = {Addison-Wesley},
+title = {{A guide to the SQL standard: a user's guide to the standard database language SQL}},
+url = {http://books.google.com/books?id=d89QAAAAMAAJ\&pgis=1},
+year = {1997}
+}
 @book{Date2009,
 author = {Date, C.J.},
 publisher = {O'Reilly Media},
