--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -22,6 +22,17 @@ title = {{Maintaining database integrity with refinement types}},
 url = {http://dl.acm.org/citation.cfm?id=2032497.2032530},
 year = {2011}
 }
+@book{Ben-Gan2005,
+abstract = {Take a detailed look at the internal architecture of T-SQL—and unveil the power of set-based querying—with comprehensive reference and advice from the experts. Database developers and administrators get best practices, sample databases, and code to master the intricacies of the programming language—solving complex problems with real-world solutions. Discover how to: Understand logical and physical query processing Apply a methodology to optimize query tuning Solve relational division problems Use CTEs and ranking functions to simplify and optimize solutions Aggregate data with various techniques, including tiebreakers, pivoting, histograms, and grouping factors Use the TOP option in a query to modify data Query specialized data structures with recursive logic, materialized path, or nested sets solutions PLUS—Improve your logic and get to the heart of querying problems with logic puzzles Get code and database samples on the Web},
+author = {Ben-Gan, Itzik and Kollar, Lubor and Sarka, Dejan},
+isbn = {0735623139},
+pages = {632},
+publisher = {Microsoft Press},
+title = {{Inside Microsoft SQL Server 2005: T-SQL Querying}},
+url = {http://books.google.com/books?id=ChnagMJDoTUC\&pgis=1},
+volume = {2009},
+year = {2006}
+}
 @inproceedings{Bjorner:2011:ETZ:2178104.2178106,
 address = {Berlin, Heidelberg},
 author = {Bj\o rner, Nikolaj},
