--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Eventually this will become something that applies theorem-proving to sql select statements to test various assertions about the properties of the statements and their potential result sets.
+This is a project to experiment with the application of automated theorem-proving to sql statements to test various assertions about the properties of the statements and their potential result sets.
