--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -22,6 +22,15 @@ title = {{Maintaining database integrity with refinement types}},
 url = {http://dl.acm.org/citation.cfm?id=2032497.2032530},
 year = {2011}
 }
+@book{Beck2000,
+abstract = {The new concept of Extreme Programming (XP) is gaining more and more acceptance, partially because it is controversial, but primarily because it is particularly well-suited to help the small software development team succeed. This book serves as the introduction to XP that the market will need. XP is controversial, many software development sacred cows don't make the cut in XP; it forces practitioners to take a fresh look at how software is developed. The author recognizes that this "lightweight" methodology is not for everyone. However, anyone interested in discovering what this new concept can offer them will want to start with this book.},
+author = {Beck, Kent},
+pages = {190},
+publisher = {Addison-Wesley Professional},
+title = {{Extreme Programming Explained: Embrace Change}},
+url = {http://books.google.com/books?id=G8EL4H4vf7UC\&pgis=1},
+year = {2000}
+}
 @book{Ben-Gan2005,
 abstract = {Take a detailed look at the internal architecture of T-SQL—and unveil the power of set-based querying—with comprehensive reference and advice from the experts. Database developers and administrators get best practices, sample databases, and code to master the intricacies of the programming language—solving complex problems with real-world solutions. Discover how to: Understand logical and physical query processing Apply a methodology to optimize query tuning Solve relational division problems Use CTEs and ranking functions to simplify and optimize solutions Aggregate data with various techniques, including tiebreakers, pivoting, histograms, and grouping factors Use the TOP option in a query to modify data Query specialized data structures with recursive logic, materialized path, or nested sets solutions PLUS—Improve your logic and get to the heart of querying problems with logic puzzles Get code and database samples on the Web},
 author = {Ben-Gan, Itzik and Kollar, Lubor and Sarka, Dejan},
@@ -114,6 +123,21 @@ pages = {571--581},
 publisher = {ACM},
 title = {{Orthogonal optimization of subqueries and aggregation}},
 url = {http://doi.acm.org/10.1145/376284.375748},
+volume = {30},
+year = {2001}
+}
+@article{Godfrey:2001:ECD:376284.375749,
+address = {New York, NY, USA},
+author = {Godfrey, Parke and Gryz, Jarek and Zuzarte, Calisto},
+doi = {10.1145/376284.375749},
+issn = {0163-5808},
+journal = {SIGMOD Rec.},
+month = may,
+number = {2},
+pages = {582--592},
+publisher = {ACM},
+title = {{Exploiting constraint-like data characterizations in query optimization}},
+url = {http://doi.acm.org/10.1145/376284.375749},
 volume = {30},
 year = {2001}
 }
