--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -10,6 +10,16 @@ title = {{Rigorous Software Development}},
 url = {http://books.google.com/books?id=9KH7-p1rQuYC\&pgis=1},
 year = {2011}
 }
+@book{Ambler2006,
+abstract = {Refactoring has proven its value in a wide range of development projects-helping software professionals improve system designs, maintainability, extensibility, and performance. Now, for the first time, leading agile methodologist Scott Ambler and renowned consultant Pramodkumar Sadalage introduce powerful refactoring techniques specifically designed for database systems.Ambler and Sadalage demonstrate how small changes to table structures, data, stored procedures, and triggers can significantly enhance virtually any database design-without changing semantics. You'll learn how to evolve database schemas in step with source code-and become far more effective in projects relying on iterative, agile methodologies.This comprehensive guide and reference helps you overcome the practical obstacles to refactoring real-world databases by covering every fundamental concept underlying database refactoring. Using start-to-finish examples, the authors walk you through refactoring simple standalone database applications as well as sophisticated multi-application scenarios. You'll master every task involved in refactoring database schemas, and discover best practices for deploying refactorings in even the most complex production environments.The second half of this book systematically covers five major categories of database refactorings. You'll learn how to use refactoring to enhance database structure, data quality, and referential integrity; and how to refactor both architectures and methods. This book provides an extensive set of examples built with Oracle and Java and easily adaptable for other languages, such as C\#, C++, or VB.NET, and other databases, such as DB2, SQL Server, MySQL, and Sybase.Using this book's techniques and examples, you can reduce waste, rework, risk, and cost-and build database systems capable of evolving smoothly, far into the future.},
+author = {Ambler, Scott W. and Sadalage, Pramod J.},
+isbn = {0321293533},
+pages = {350},
+publisher = {Addison Wesley},
+title = {{Refactoring databases: evolutionary database design}},
+url = {http://books.google.com/books?id=puBQAAAAMAAJ\&pgis=1},
+year = {2006}
+}
 @inproceedings{Baltopoulos:2011:MDI:2032497.2032530,
 address = {Berlin, Heidelberg},
 author = {Baltopoulos, Ioannis G and Borgstr\"{o}m, Johannes and Gordon, Andrew D},
@@ -39,7 +49,6 @@ pages = {632},
 publisher = {Microsoft Press},
 title = {{Inside Microsoft SQL Server 2005: T-SQL Querying}},
 url = {http://books.google.com/books?id=ChnagMJDoTUC\&pgis=1},
-volume = {2009},
 year = {2006}
 }
 @inproceedings{Bjorner:2011:ETZ:2178104.2178106,
@@ -64,6 +73,19 @@ publisher = {Springer},
 title = {{The Calculus of Computation: Decision Procedures with Applications to Verification}},
 url = {http://books.google.com/books?id=0MbX7xVpffAC\&pgis=1},
 year = {2010}
+}
+@inproceedings{Danaparamita:2011:QHU:1951365.1951440,
+address = {New York, NY, USA},
+author = {Danaparamita, Jonathan and Gatterbauer, Wolfgang},
+booktitle = {Proceedings of the 14th International Conference on Extending Database Technology},
+doi = {10.1145/1951365.1951440},
+isbn = {978-1-4503-0528-0},
+pages = {558--561},
+publisher = {ACM},
+series = {EDBT/ICDT '11},
+title = {{QueryViz: helping users understand SQL queries and their patterns}},
+url = {http://doi.acm.org/10.1145/1951365.1951440},
+year = {2011}
 }
 @book{Date1997,
 abstract = {The previous edition of this book established itself as the most complete and understandable treatment of the SQL standard generally available. Many changes have occurred in the SQL standards world since that edition was published, however: a major new component, the Call-Level Interface (SQL/CLI), was added in 1995. Another major new component, the Persistent Stored Modules feature (SQL/PSM), is nearing completion and is due to be added to the standard in late 1996 or early 1997. The original 1992 standard itself has been significantly changed and corrected through the publication of two extensive Technical Corrigenda, one in 1994 and one in 1996.All of these changes are reflected in this Fourth Edition. Earlier editions of this book established a tradition of careful, clear, and accurate explanation of complex technical material. This new edition continues that tradition.},
@@ -195,8 +217,9 @@ year = {2012}
 @book{Karwin2010,
 abstract = {Each chapter in this book helps you identify, explain, and correct a unique and dangerous antipattern. The four parts of the book group the anti?patterns in terms of logical database design, physical database design, queries, and application development. The chances are good that your application's database layer already contains problems such as Index Shotgun, Keyless Entry, Fear of the Unknown, and Spaghetti Query. This book will help you and your team find them. Even better, it will also show you how to fix them, and how to avoid these and other problems in the future. SQL Antipatterns gives you a rare glimpse into an SQL expert's playbook. Now you can stamp out these common database errors once and for all. Whatever platform or programming language you use, whether you're a junior programmer or a Ph.D., SQL Antipatterns will show you how to design and build databases, how to write better database queries, and how to integrate SQL programming with your application like an expert. You'll also learn the best and most current technology for full-text search, how to design code that is resistant to SQL injection attacks, and other techniques for success.},
 author = {Karwin, Bill},
+isbn = {1934356557},
 pages = {333},
-publisher = {O'Reilly Vlg. GmbH \& Company},
+publisher = {Pragmatic Bookshelf},
 title = {{SQL Antipatterns: Avoiding the Pitfalls of Database Programming}},
 url = {http://books.google.com/books?id=Ghr4RAAACAAJ\&pgis=1},
 year = {2010}
@@ -225,6 +248,16 @@ series = {IFIP '74},
 title = {{Predicate Logic as Programming Language}},
 url = {http://www.doc.ic.ac.uk/~rak/papers/IFIP 74.pdf},
 year = {1974}
+}
+@book{Larman2002,
+abstract = {For all undergraduate courses in object-oriented analysis and design. Builds on the overwhelming success of the First Edition. The topics covered in this book are increasingly recognized as core competencies by virtually all contemporary computer science departments, and in virtually all computer science curricula.This book teaches object-oriented analysis and design through iterations of a single, cohesive case study incrementally introducing key OO\&AD skills while emphasizing practical activities and principles. Renowned object technology leader Craig Larman introduces the popular UML 1.4 diagramming notation as a superior vehicle for expressing OO\&AD thoughts. Since OOA\&D should be taught (and practiced) within a coherent process, he presents a lightweight, agile version of the market-leading Unified Process (UP). Within his case study's context, he also introduces patterns robust, best-practice solutions to the most widely encountered design problems.},
+author = {Larman, Craig},
+isbn = {0131489062},
+pages = {736},
+publisher = {Prentice Hall Professional},
+title = {{Applying Uml and Patterns: An Introduction to Object-Oriented Analysis and Design, and the Unified Process}},
+url = {http://books.google.com/books?id=r8i-4En\_aa4C\&pgis=1},
+year = {2004}
 }
 @book{Levene1999,
 abstract = {Addressing important extensions of the relational database model, including deductive, temporal, and object-oriented databases, this book provides an overview of database modeling with the Entity-Relationship (ER) model and the relational model. The book focuses on the primary achievements in relational database theory, including query languages, integrity constraints, database design, computable queries, and concurrency control. This reference will shed light on the ideas underlying relational database systems and the problems that confront database designers and researchers.},
@@ -281,7 +314,6 @@ pages = {893},
 publisher = {Morgan Kaufmann},
 title = {{SQL: 1999 - Understanding Relational Language Components}},
 url = {http://books.google.com/books?id=wyhXvU0Eyg0C\&pgis=1},
-volume = {0},
 year = {2001}
 }
 @inproceedings{Moseley06outof,
