--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -74,6 +74,16 @@ title = {{The Calculus of Computation: Decision Procedures with Applications to 
 url = {http://books.google.com/books?id=0MbX7xVpffAC\&pgis=1},
 year = {2010}
 }
+@book{Celko2010,
+abstract = {SQL for Smarties was hailed as the first book devoted explicitly to the advanced techniques needed to transform an experienced SQL programmer into an expert. Now, 10 years later and in the third edition, this classic still reigns supreme as the book written by an SQL master that teaches future SQL masters. These are not just tips and techniques; Joe also offers the best solutions to old and new challenges and conveys the way you need to think in order to get the most out of SQL programming efforts for both correctness and performance. In the third edition, Joe features new examples and updates to SQL-99, expanded sections of Query techniques, and a new section on schema design, with the same war-story teaching style that made the first and second editions of this book classics.* Expert advice from a noted SQL authority and award-winning columnist, who has given ten years of service to the ANSI SQL standards committee and many more years of dependable help to readers of online forums. * Teaches scores of advanced techniques that can be used with any product, in any SQL environment, whether it is an SQL-92 or SQL-99 environment. * Offers tips for working around system deficiencies. * Continues to use war stories--updated!--that give insights into real-world SQL programming challenges.},
+author = {Celko, Joe},
+isbn = {0123820227},
+pages = {840},
+publisher = {Morgan Kaufmann},
+title = {{Joe Celko's SQL for Smarties: Advanced SQL Programming}},
+url = {http://books.google.com/books?id=Hi9fMnOoRtAC\&pgis=1},
+year = {2010}
+}
 @inproceedings{Danaparamita:2011:QHU:1951365.1951440,
 address = {New York, NY, USA},
 author = {Danaparamita, Jonathan and Gatterbauer, Wolfgang},
@@ -408,6 +418,21 @@ series = {LPAR'10},
 title = {{Qex: symbolic SQL query explorer}},
 url = {http://dl.acm.org/citation.cfm?id=1939141.1939165},
 year = {2010}
+}
+@article{Zemke:2012:WNS:2206869.2206883,
+address = {New York, NY, USA},
+author = {Zemke, Fred},
+doi = {10.1145/2206869.2206883},
+issn = {0163-5808},
+journal = {SIGMOD Rec.},
+month = apr,
+number = {1},
+pages = {67--73},
+publisher = {ACM},
+title = {{What's new in SQL:2011}},
+url = {http://doi.acm.org/10.1145/2206869.2206883},
+volume = {41},
+year = {2012}
 }
 @book{farrer_quantitative_2011,
 address = {Chico, Calif.},
