html for 3 new figures

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -6,6 +6,14 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+Lorem ipsum dolor sit amet $ \top \rightarrow WP1 $ alpha satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \varphi : \top $ alpha satisfies phi.
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $ a \mapsto ( b \wedge c \wedge d )  $ desc.
 
 \centerline{~}
