--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -3,10 +3,41 @@
 
 Please ignore the lorem ipsum stuff. This is here so that when I import this into MS Word, I can verify that things got imported in a format that is acceptable.  Just ignore!
 
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \Gamma_{\scriptsize SQL} \cup \{\neg @post\} $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \gamma $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \Gamma_{\scriptsize SQL} \vDash @post $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ ( \gamma_{\scriptsize 1} \wedge \gamma_{\scriptsize 2} \wedge ... \wedge \gamma_{\scriptsize n} ) \rightarrow @post $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ ( F_{\scriptsize 1} \wedge F_{\scriptsize 2} \wedge ... \wedge F_{\scriptsize n} ) \rightarrow @post $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \Gamma_{\scriptsize SQL} $ Gamma.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \forall x \, P(x) \equiv \neg \exists x \, \neg P(x)  $ alpha satisfies phi.
 
 \centerline{~}
 
 Lorem ipsum dolor sit amet $ \top \rightarrow WP1 $ alpha satisfies phi.
+
+\centerline{~}
+
+Lorem ipsum dolor sit amet $ \pi $ alpha satisfies phi.
 
 \centerline{~}
 
