more articles in bib file

--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -84,6 +84,28 @@ title = {{Joe Celko's SQL for Smarties: Advanced SQL Programming}},
 url = {http://books.google.com/books?id=Hi9fMnOoRtAC\&pgis=1},
 year = {2010}
 }
+@inproceedings{Colmerauer:1993:BP:154766.155362,
+address = {New York, NY, USA},
+author = {Colmerauer, Alain and Roussel, Philippe},
+booktitle = {The second ACM SIGPLAN conference on History of programming languages},
+doi = {10.1145/154766.155362},
+isbn = {0-89791-570-4},
+pages = {37--52},
+publisher = {ACM},
+series = {HOPL-II},
+title = {{The birth of Prolog}},
+url = {http://doi.acm.org/10.1145/154766.155362},
+year = {1993}
+}
+@article{DBLP:journals/ai/KowalskiK71,
+author = {Kowalski, Robert A and Kuehner, Donald},
+journal = {Artif. Intell.},
+number = {3/4},
+pages = {227--260},
+title = {{Linear Resolution with Selection Function}},
+volume = {2},
+year = {1971}
+}
 @inproceedings{Danaparamita:2011:QHU:1951365.1951440,
 address = {New York, NY, USA},
 author = {Danaparamita, Jonathan and Gatterbauer, Wolfgang},
@@ -331,6 +353,19 @@ author = {Moseley, Ben and Marks, Peter},
 booktitle = {SOFTWARE PRACTICE ADVANCEMENT (SPA)},
 title = {{Out of the Tar Pit}},
 year = {2006}
+}
+@inproceedings{Naqvi:1985:NFF:6012.15408,
+address = {New York, NY, USA},
+author = {Naqvi, Shamim A},
+booktitle = {Proceedings of the fifth ACM SIGACT-SIGMOD symposium on Principles of database systems},
+doi = {10.1145/6012.15408},
+isbn = {0-89791-179-2},
+pages = {114--122},
+publisher = {ACM},
+series = {PODS '86},
+title = {{Negation as failure for first-order queries}},
+url = {http://doi.acm.org/10.1145/6012.15408},
+year = {1986}
 }
 @article{Robinson:1965:MLB:321250.321253,
 address = {New York, NY, USA},
