infinity symbol in latex

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -5,6 +5,10 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+Lorem ipsum dolor sit amet $ - \infty $ all/any/every assignment satisfies phi.
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $ \Gamma_{\scriptsize SQL} \cup \{\neg @post\} $ all/any/every assignment satisfies phi.
 
 \centerline{~}
