--- a/docs/mendeley_references.bib
+++ b/docs/mendeley_references.bib
@@ -20,6 +20,13 @@ title = {{Refactoring databases: evolutionary database design}},
 url = {http://books.google.com/books?id=puBQAAAAMAAJ\&pgis=1},
 year = {2006}
 }
+@misc{BV2013,
+author = {BV, TIOBE Software},
+title = {{Tiobe Software: Tiobe Index Definition}},
+url = {http://www.tiobe.com/index.php/content/paperinfo/tpci/tpci\_definition.htm},
+urldate = {Mar 11, 2013},
+year = {2013}
+}
 @inproceedings{Baltopoulos:2011:MDI:2032497.2032530,
 address = {Berlin, Heidelberg},
 author = {Baltopoulos, Ioannis G and Borgstr\"{o}m, Johannes and Gordon, Andrew D},
@@ -163,6 +170,7 @@ author = {Fetter, David},
 booktitle = {OSCON 2009},
 title = {{High Performance SQL with PostgreSQL 8.4}},
 url = {http://assets.en.oreilly.com/1/event/27/High Performance SQL with PostgreSQL Presentation.pdf},
+urldate = {Mar 11, 2013},
 year = {2009}
 }
 @article{Galindo-Legaria:2001:OOS:376284.375748,
@@ -454,6 +462,13 @@ title = {{Qex: symbolic SQL query explorer}},
 url = {http://dl.acm.org/citation.cfm?id=1939141.1939165},
 year = {2010}
 }
+@misc{Welton,
+author = {Welton, David N.},
+title = {{LangPop.com - Programming Language Popularity}},
+url = {http://langpop.com/},
+urldate = {Mar 11, 2013},
+year = {2011}
+}
 @article{Zemke:2012:WNS:2206869.2206883,
 address = {New York, NY, USA},
 author = {Zemke, Fred},
@@ -516,4 +531,29 @@ title = {{Applying Patterns and SQL Idioms to Optimise Relational Database Queri
 url = {http://repsi-tool.googlecode.com/files/Dissertation U7637432.pdf},
 volume = {Dept. of C},
 year = {2007}
+}
+@article{wielemaker:2011:tplp,
+abstract = {SWI-Prolog is neither a commercial Prolog system nor a purely academic
+enterprise, but increasingly a community project. The core system has
+been shaped to its current form while being used as a tool for building
+research prototypes, primarily for knowledge-intensive and
+interactive systems. Community contributions have added
+several interfaces and the constraint (CLP) libraries. Commercial
+involvement has created the initial garbage collector, added several
+interfaces and two development tools: PlDoc (a literate programming
+documentation system) and PlUnit (a unit testing environment).
+
+In this article we present SWI-Prolog as an integrating tool, supporting
+a wide range of ideas developed in the Prolog community and acting as
+glue between foreign resources. This article itself is the
+glue between technical articles on SWI-Prolog, providing context and
+experience in applying them over a longer period.},
+author = {Wielemaker, Jan and Schrijvers, Tom and Triska, Markus and Lager, Torbj\"{o}rn},
+issn = {1471-0684},
+journal = {Theory and Practice of Logic Programming},
+number = {1-2},
+pages = {67--96},
+title = {{SWI-Prolog}},
+volume = {12},
+year = {2012}
 }
