final reference numbers for all references but four of 'em

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -5,6 +5,63 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+ERE $ \varphi_{\scriptsize 1} \leftarrow \psi_{\scriptsize 1}   $ AND
+
+ERE $ \varphi_{\scriptsize 2} \leftarrow \psi_{\scriptsize 2}   $ AND
+
+\centerline{~}
+
+ERE $    $ AND
+
+\centerline{~}
+
+ERE $ \exists x. \neg \alpha(x)   $ AND
+
+\centerline{~}
+
+ERE $ \exists x. \neg \alpha(x)   $ AND
+
+
+\centerline{~}
+
+ERE $ \exists x. \neg \alpha(x)   $ AND
+
+\centerline{~}
+
+ERE $ \exists X. 3 < X  $ AND
+
+\centerline{~}
+
+ERE $ \exists X. is\_one(X).  $ AND
+
+\centerline{~}
+
+RE $ \forall \bar{x}. P(...) \leftarrow Q1(...) \wedge Q2(...) ... \wedge Qn(...) $ AN.
+
+\centerline{~}
+
+WORDSHERE $ \forall \bar{x}. P(...) \leftarrow \top  $ ANDALSOHERE.
+
+\centerline{~}
+
+WORDSHERE $ \exists \bar{x}.  Q1(...) \wedge Q2(...) ... \wedge Qn(...)  $ ANDALSOHERE.
+
+\centerline{~}
+
+WORDSHERE $ - \infty $ ANDALSOHERE.
+
+\centerline{~}
+
+WORDSHERE $ - \infty $ ANDALSOHERE.
+
+\centerline{~}
+
+WORDSHERE $ - \infty $ ANDALSOHERE.
+
+
+
+\centerline{~}
+
 Lorem ipsum dolor sit amet $ - \infty $ all/any/every assignment satisfies phi.
 
 \centerline{~}
