more latex scratch notes

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -5,6 +5,18 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+RE $ \varphi   $ AN
+
+\centerline{~}
+
+RE $ \neg \varphi   $ AN
+
+\centerline{~}
+
+ERE $ \leq   $ AND
+
+\centerline{~}
+
 ERE $ \varphi_{\scriptsize 1} \leftarrow \psi_{\scriptsize 1}   $ AND
 
 ERE $ \varphi_{\scriptsize 2} \leftarrow \psi_{\scriptsize 2}   $ AND
