figured out how to get a latex command to force-insert whitespace

--- a/docs/latexnotes.tex
+++ b/docs/latexnotes.tex
@@ -5,6 +5,19 @@ Please ignore the lorem ipsum stuff. This is here so that when I import this int
 
 \centerline{~}
 
+RE $ \forall \bar{x}. P(...) \leftarrow Q1(...) \wedge Q2(...) \quad ... \quad \wedge Qn(...) $ AN.
+
+\centerline{~}
+
+RE $ \forall \bar{x}. P(...) \leftarrow \top  $ AN.
+
+\centerline{~}
+
+RE $ \exists \bar{x}.  Q1(...) \wedge Q2(...) \quad ... \quad \wedge Qn(...)  $ AN.
+
+
+\centerline{~}
+
 RE $ \varphi   $ AN
 
 \centerline{~}
